--- a/CK.Auth.Cris/CK.Auth.Cris.csproj
+++ b/CK.Auth.Cris/CK.Auth.Cris.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="2.1.0" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="2.1.1--0001-develop" />
   </ItemGroup>
 </Project>
