--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ branches:
 environment:
   CODECAKEBUILDER_SECRET_KEY:
     secure: 8VAzdXgUQaJyFoU3WLf2iPFV/8zPDm9qV4TfOpx8/rg=
+install:
+  - ps: Install-Product node 18 x64
 build_script:
   - dotnet run --project CodeCakeBuilder -nointeraction
 test: off
