--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Runtime" Version="22.0.1--0000-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="22.0.1" />
     <!--
           This CK.Cris.Engine directly implements the TypeScriptCrisCommandGeneratorImpl to avoid another (quite small) assembly.
 
@@ -13,7 +13,7 @@
           - the TypeScriptAspect is declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration.
           - AND the CK.Cris.TypeScript must be referenced.
     -->
-    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.11.1--0001-develop" />
+    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.11.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
