--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.1" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="22.0.1" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.2--0002-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="22.0.2--0002-develop" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
