--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,6 +5,6 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Model" Version="22.0.2--0007-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="22.1.0" />
   </ItemGroup>
 </Project>
