--- a/CK.Auth.Cris/CK.Auth.Cris.csproj
+++ b/CK.Auth.Cris/CK.Auth.Cris.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.3--0009-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="4.0.0" />
   </ItemGroup>
 </Project>
