--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="3.1.3--0009-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="22.1.1--0012-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="4.0.0" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="23.0.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
