--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,6 +5,6 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.StObj.Model" Version="23.0.0" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0004-develop" />
   </ItemGroup>
 </Project>
