--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <description>
-    This package extends the IPoco typescript code for ICommand Poco by adding their CommandModel.
+    This package extends the IPoco typescript code for ICommand Poco by adding their CrisPocoModel.
 
-    The CK/Cris/Model.ts defines the CommandModel and ICrisEndpoint interfaces.
+    The CK/Cris/Model.ts defines the CrisPocoModel and ICrisEndpoint interfaces.
 </description>
   </PropertyGroup>
   <!--
