--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -17,7 +17,8 @@
          declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
 
         For components registration, we must ensure that this CK.Cris.TypeScript.dll keeps a reference to the CK.StObj.TypeScript.dll.
-        This is the goal of the Fake in EnsureReference.cs.
+        This is the goal of the [assembly: CK.Core.PreserveAssemblyReference( typeof( CK.StObj.TypeScript.TypeScriptAttribute ) )]
+        in AssemblyInfo.cs.
     -->
   <ItemGroup>
     <PackageReference Include="CK.StObj.TypeScript" Version="0.13.1--0035-develop" />
