--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04i3pbn-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0121-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04i5lo8-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0122-develop" />
   </ItemGroup>
 </Project>
