--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04i96bs-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0124-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04j1mrh-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0125-develop" />
   </ItemGroup>
 </Project>
