--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
