--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jgop8-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0132-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jgq8c-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0133-develop" />
   </ItemGroup>
 </Project>
