--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhy04-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0138-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04jhz0v-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="23.0.1--0139-develop" />
   </ItemGroup>
 </Project>
