--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CK.Testing.AppIdentity" Version="0.0.0--04ytqpn-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04yuaub-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04yvw1l-develop" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
