--- a/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
+++ b/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
@@ -4,7 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04yvw0m-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04yvzzy-develop" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
