--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -6,9 +6,9 @@
   <ItemGroup>
     <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04z7c00-develop" />
     <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04zcmkc-develop" />
-    <PackageReference Include="NUnit" Version="4.1.0" />
-    <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zcmka-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Executor.Engine\CK.Cris.Executor.Engine.csproj" />
