--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zdxq0-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zdxq1-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04ze4fw-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
