--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Globalization" Version="0.0.0--04zi8x5-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04zi8x6-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04zijuh-develop" />
   </ItemGroup>
 </Project>
